<resources>
    <string name="app_name">Ecommerce</string>
    <string name="seem">See More</string>
    <string name="newi">New Items</string>
    <string name="deal">Deal of the Week</string>
    <string name="recent">Recent Deal</string>
    <string name="cart">Cart</string>
    <string name="setting">Settings</string>
    <string name="newg">New Items Gallery</string>
    <string name="fullImage">Image Viewer</string>
    <string name="total">Total Amount</string>
    <string name="checkout">CHECKOUT</string>
    <string name="imageName">Image Name</string>
    <string name="myCart">My Cart</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="noAcc">Create an Account</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="signin">Sign In</string>
    <string name="greet">Welcome to Ecommerce</string>
    <string name="eoru">Enter Username or Email</string>
    <string name="enterUser">Enter Username</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPass">Enter Password</string>
    <string name="dmen">Men Wear</string>
    <string name="dwomen">Women Wear</string>
    <string name="dkid">Kids Wear</string>
    <string name="close">Close this app</string>
    <string name="signout">Sign Out</string>
    <string name="test">Test</string>
    <string name="comm">Communicate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Setting</string>
    <string name="nav_header_subtitle">example@example.com</string>
    <string name="category">Category</string>
    <string name="fav">Favorites</string>
    <string name="fitems">Favorites Items</string>
    <string name="removefromfav">Remove Product</string>
    <string name="productprice">Product Price</string>
    <string name="qnty">Quantity</string>
    <string name="addedtocart">Added to cart</string>
    <string name="userdesc">User Image</string>
    <string name="editProfile">User Profile</string>
    <string name="profile">Profile</string>
    <string name="fullname">Full Name</string>
    <string name="username">Username</string>
    <string name="useremail">Email</string>
    <string name="userAdress">Address</string>
    <string name="contact">Contact</string>
    <string name="enterAdd">Enter Address</string>
    <string name="enterContact">Enter Contact</string>
    <string name="frstname">First Name</string>
    <string name="midname">Middle Name</string>
    <string name="lastname">Last Name</string>
    <string name="uploadpic">UPload PHoto</string>
    <string name="forgotpw">Forgot Password?</string>
    <string name="choosecamera">Open Camera</string>
    <string name="chooseGallery">Open Gallery</string>
    <string name="editPic">Change Pic</string>
    <string name="save">Save</string>
    <string name="enterEmailes">Enter your email address to Reset Passsword</string>
    <string name="enterpassword">Enter your new password</string>
    <string name="reenter">ReEnter Password</string>
    <string name="availablesoon">Product Will be Avaliable Soon.</string>
    <string name="contactDetail">CONTACT DETAILS</string>
    <string name="shippingadd">SHIPPING ADDRESS</string>
    <string name="wardno">Ward No</string>
    <string name="enterState">Enter State</string>
    <string name="enterDistrict">District</string>
    <string name="enterStreet">Street Name</string>
    <string name="enterStreetno">Street Number</string>
    <string name="cashonDl">Cash on Delivery</string>
    <string name="confirm">Confirmation Deals</string>
    <string name="MyPro">My Product</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="title_activity_admin_dashboard">AdminDashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_add_product_color">AddProductColor</string>
    <string name="title_activity_add_product_size">AddProductSize</string>
    <string name="title_activity_add_prod_image">AddProdImage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addPro">Add Product</string>
    <string name="addIMages">Add Product Images</string>
    <string name="addColor">Add Color</string>
    <string name="addSize">Add Size</string>
    <string name="updateTable">Update Table</string>
    <string name="deleteTable">Delete Table</string>
    <string name="number">32</string>
    <string name="productBrg">Product Bought</string>
    <string name="selectImage">Select Image</string>
    <string name="productName">Product Name</string>
    <string name="productDesc">Product Description</string>
    <string name="chooseCategory">Choose Category</string>
    <string name="enterTags">TAGS: shirt,shoes,..</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="selectID">Select Id</string>
    <string name="addCOlor">Add Color</string>
    <string name="update">Update</string>
    <string name="changeServer">Change Server</string>
    <string name="imgdes">image desc</string>
    <string name="server">server ip</string>
    <string name="submit">Submit</string>
    <string name="title_activity_setting">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="notiType">Type Notification</string>
    <string name="notiCategory">Category Notificaiton</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
</resources>