<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item

        android:title="@string/cart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:id="@+id/cart"
        app:showAsAction="ifRoom"
        android:actionLayout="@layout/cart_attach"
        android:visible="true"
        android:orderInCategory="0"
        />
    <item
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:id="@+id/action_Setting"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_setting"
        />

    <item
        android:title="@string/signout"
        android:orderInCategory="100"
        android:id="@+id/action_signin"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_setting"
        />
    <item
        android:title="@string/changeServer"
        android:orderInCategory="100"
        android:id="@+id/changeServer"
        app:showAsAction="ifRoom"
        android:icon="@drawable/router"
        />

</menu>