<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                app:cardElevation="7dp"
                app:cardCornerRadius="7dp"
                android:layout_margin="10dp"
                android:padding="6dp"
                android:id="@+id/cartAddProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:visibility="gone"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:id="@+id/viewProductImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp" />

                <Button
                    android:layout_below="@id/viewProductImage"
                    android:text="@string/selectImage"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_margin="5dp"
                    android:background="@drawable/edit_text_background"
                    android:layout_toEndOf="@id/viewProductImage"
                    android:id="@+id/selectIMAGES"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/productName"
                    android:layout_margin="5dp"
                    android:inputType="textCapWords"
                    android:id="@+id/enterPRODUCTname"
                    android:layout_below="@id/selectIMAGES"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="number"
                    android:layout_below="@id/enterPRODUCTname"
                    android:id="@+id/enterPRODUCTprice"
                    android:layout_margin="5dp"
                    android:hint="@string/productprice"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit"
                    android:layout_below="@+id/enterPRODUCTprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:minWidth="300dp"
                    android:layout_below="@+id/enterPRODUCTprice"
                    android:id="@+id/enterPRODUCTdesc"
                    android:inputType="textCapSentences"
                    android:layout_margin="5dp"
                    android:hint="@string/productDesc"
                    android:gravity="top"
                    android:padding="6dp"
                    android:minLines="1"
                    android:maxLines="5"
                    android:minHeight="70dp"
                    android:ems="5"
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/chooseCategory"
                    android:layout_below="@id/edit"
                    android:id="@+id/viewSpinnerCategory"
                    android:layout_width="150dp"
                    android:layout_height="40dp" />
                <Spinner
                    android:layout_toEndOf="@id/viewSpinnerCategory"
                    android:layout_below="@id/edit"
                    android:id="@+id/enterPRODUCTcategory"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="textCapWords"
                    android:layout_margin="5dp"
                    android:hint="@string/enterTags"
                    android:layout_below="@+id/enterPRODUCTcategory"
                    android:id="@+id/enterPRODUCTtags"/>
                <Button
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/edit_text_background"
                    android:id="@+id/cancelUpload"
                    android:layout_margin="5dp"
                    android:layout_below="@id/enterPRODUCTtags"
                    android:text="@string/cancel"
                    android:layout_width="150dp"
                    android:layout_height="40dp" />
                <Button
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/uploadProduct"
                    android:layout_toEndOf="@id/cancelUpload"
                    android:text="@string/upload"
                    android:layout_margin="5dp"
                    android:layout_below="@id/enterPRODUCTtags"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="150dp"
                    android:layout_height="40dp" />



            </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>