<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_margin="7dp"
            android:padding="4dp"
            app:cardCornerRadius="9dp"
            app:cardElevation="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:id="@+id/selectID"
                    android:text="@string/selectID"
                    android:layout_width="100dp"
                    android:layout_height="40dp" />
                <Spinner
                    android:layout_margin="5dp"
                    android:id="@+id/spinnergetID"
                    android:layout_toEndOf="@id/selectID"
                    android:layout_width="120dp"
                    android:layout_height="40dp">
                </Spinner>

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="250dp"
                    android:inputType="textCapCharacters"
                    android:textAllCaps="true"
                    android:background="@drawable/edit_text_background"
                    android:id="@+id/addSIZE"
                    android:layout_below="@id/selectID"
                    android:layout_margin="5dp"
                    android:padding="3dp"
                    android:hint="@string/addSize"
                    android:layout_height="match_parent" />

                <Button
                    android:background="@drawable/edit_text_background"
                    android:text="@string/cancel"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_below="@+id/addSIZE"
                    android:layout_margin="5dp"
                    android:id="@+id/cancelSIZE"
                    android:layout_width="100dp"
                    android:layout_height="40dp" />

                <Button
                    android:layout_toEndOf="@+id/cancelSIZE"
                    android:id="@+id/updateSIZE"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:layout_below="@+id/addSIZE"
                    android:text="@string/update"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="100dp"
                    android:layout_height="40dp" />
                <ImageView
                    android:visibility="gone"
                    android:id="@+id/imageViewSIZE"
                    android:contentDescription="@string/imageName"
                    android:layout_margin="5dp"
                    android:layout_below="@id/updateSIZE"
                    android:layout_width="200dp"
                    android:layout_height="200dp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>


</RelativeLayout>